Code improvements
(cherry picked from commit 8bd49a8e52fb9d3f9f3684f026e21e3bdea347be)