@@ -1,6 +1,5 @@
 package me.lortseam.completeconfig.extension.clothconfig;
 
-import com.google.common.collect.ImmutableSet;
 import me.lortseam.completeconfig.extension.BaseExtension;
 import me.lortseam.completeconfig.extension.Extension;
 
@@ -10,7 +9,7 @@ public final class ClothConfigExtension implements BaseExtension {
 
     @Override
     public Set<Class<? extends Extension>> children() {
-        return ImmutableSet.of(ClothConfigClientExtension.class, ClothConfigGuiExtension.class);
+        return Set.of(ClothConfigClientExtension.class, ClothConfigGuiExtension.class);
     }
 
 }
